--- a/PNC/unitstats/index.css
+++ b/PNC/unitstats/index.css
@@ -114,8 +114,8 @@ input[type="checkbox"] {
 /* #endregion */
 
 /* #region Class */
-#classed {
-    width: 70px;
+#classes {
+    width: 105px;
 }
 
 #classes > label {
