--- a/univasset/scripts/html/index.css
+++ b/univasset/scripts/html/index.css
@@ -1,5 +1,6 @@
 @import "./textstyle.css";
 
+/* #region Embeds */
 /* #region Google Document */
 div.embed-google > select {
     max-width: calc(100% - 60px);
@@ -24,14 +25,70 @@ div.embed-google > iframe {
 }
 /* #endregion */
 
+iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
+    width: 100%;
+    aspect-ratio: 16/9;
+    border: 0px;
+    display: block;
+}
+
+blockquote.twitter-tweet > iframe[src*="platform.twitter.com"] {
+    max-width: 100%;
+}
+
 iframe#reddit-embed {
     aspect-ratio: 1/1;
     border: none;
     width: 100%;
 }
+/* #endregion */
 
 img.inline-img {
     vertical-align: middle;
     display: inline;
     height: 0.9lh;
 }
+
+/* #region Page Slider */
+div.slider {
+    position: relative;
+    display: inline-grid;
+    gap: 1px;
+}
+
+div.slider.horizontal {
+    grid-template-columns: 16px auto 16px;
+    grid-auto-rows: 16px;
+}
+
+div.slider > button {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.slider > input::before {
+    content: attr(value);
+    opacity: 0;
+    position: absolute;
+    transition: 0.2s;
+    width: 50px;
+    padding: 0.5em;
+    background-color: black;
+    border-radius: 0.25em;
+    color: white;
+    text-align: center;
+    pointer-events: none;
+}
+
+div.slider.horizontal > input::before {
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 100%;
+}
+
+div.slider:hover > input::before {
+    opacity: 1;
+}
+/* #endregion */
