--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -7,7 +7,7 @@
 
 @import "./nonest.css";
 
-input[type="checkbox"], input[type="radio"] {
+input[type="checkbox"] {
     appearance: none;
     margin: 0px;
 }
@@ -49,6 +49,10 @@ body {
 
 #Tags div {
     text-align: center;
+}
+
+#Browse .slider {
+    width: calc(100% - 67px);
 }
 /* #endregion */
 
@@ -119,19 +123,6 @@ details[open] {
 details[open] > summary {
     text-align: center;
     display: block;
-}
-/* #endregion */
-
-/* #region Embed */
-iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
-    width: 100%;
-    aspect-ratio: 16/9;
-    border: 0px;
-    display: block;
-}
-
-.twitter-tweet > iframe[src*="platform.twitter.com"] {
-    max-width: 100%;
 }
 /* #endregion */
 
