--- a/univasset/scripts/html/index.css
+++ b/univasset/scripts/html/index.css
@@ -73,6 +73,7 @@ div.slider > input::before {
     opacity: 0;
     position: absolute;
     transition: 0.2s;
+    /* change to rem? */
     width: 50px;
     padding: 0.5em;
     background-color: black;
