--- a/univasset/scripts/faqs/nonest.css
+++ b/univasset/scripts/faqs/nonest.css
@@ -13,14 +13,14 @@
 }
 /* #endregion */
 
-#Tags .tags:has(input:checked) {
+/*#Tags .tags:has(input:checked) {
     background: aqua;
     color: black;
 }
 
 .tags > .tooltiptext {
     bottom: 110%;
-}
+}*/
 
 /* Staples */
 fieldset > legend > h3 {
