--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -5,14 +5,8 @@
 @import "../tabs.css";
 @import "../html/index.css";
 
-@import "./nonest.css";
-
 input[type="checkbox"] {
     appearance: none;
-    margin: 0px;
-}
-
-dl, table, blockquote, figure {
     margin: 0px;
 }
 
@@ -21,19 +15,17 @@ body {
 }
 
 /* #region Tabs */
-.tab-button {
-    & > label {
-        background-color: transparent;
-        line-height: 10px;
-    }
+.tab-button > label {
+    background-color: transparent;
+    line-height: 10px;
+}
 
-    & > label:has(input:checked) {
-        background-color: darkgreen;
-    }
+.tab-button > label:has(input:checked) {
+    background-color: darkgreen;
+}
 
-    & h2 {
-        margin: 0px 0px 10px;
-    }
+.tab-button h2 {
+    margin: 0px 0px 10px;
 }
 
 #Keywords input[type="text"] {
@@ -63,78 +55,9 @@ body {
     background: transparent;
     color: aqua;
     display: inline-grid;                       /* For making the tag buttons stay together on wrap. */
-
-    /*#Tags &:has(input:checked) {
-        background: aqua;
-        color: black;
-    }
-
-    & > .tooltiptext {
-        bottom: 110%;
-    }*/
 }
-
-fieldset {
-    /* Staples */
-    margin-top: 5px;
-
-    & > legend > h3 {
-        margin: 0px;
-    }
-
-    & > hr {
-        border-top: 1px dashed;
-    }
-
-    & > .tags {
-        line-height: 20px;
-        margin: 0 5px;
-        text-shadow: none;
-    }
-
-    /* Contents */
-    & :is(ol, ul) {
-        margin: 0px;
-        padding-inline-start: 20px;
-    }
-
-    & a {
-        text-decoration: none;
-    }
-
-    & img:not(.inline-img) {
-        margin: 0 auto;
-        display: block;
-    }    
-}
-
-/* #region Details and Summary */
-details, details > summary {
-    display: inline;
-}
-
-details[open] {
-    display: block;
-    background-color: #3a3a3a80;
-    border-radius: 10px;
-    padding: 5px;
-}
-
-details[open] > summary {
-    text-align: center;
-    display: block;
-}
-/* #endregion */
 
 /* #region Cards form */
-fieldset legend label {
-    cursor: pointer;
-}
-
-fieldset:has(legend input:checked) {
-    border-color: crimson;
-}
-
 #Cards input[type="submit"] {
     --position-multiplier: 1;
     display: none;
