--- a/PNC/spiritstats/index.css
+++ b/PNC/spiritstats/index.css
@@ -6,7 +6,11 @@ input {
 }
 
 
-#select-spirit {
+#spirit-option :first-child {
+    display: flex;
+}
+
+#select-spirit, #spirit-option button {
     --gridsize: 100px;
     display: inline-grid;
     grid-template-areas: 
@@ -17,17 +21,17 @@ input {
     gap: 5;
 }
 
-#select-spirit img {
+#select-spirit img, #spirit-option img {
     grid-area: image;
     width: 100px;
     aspect-ratio: 1;
 }
 
-#select-spirit span {
+#select-spirit span, #spirit-option span {
     grid-area: name;
 }
 
-#select-spirit div {
+#select-spirit div, #spirit-option div {
     grid-area: stats;
 }
 
